test: refactor the multi-instance subprocess modification test to clarify usage of inner instance as ancestor scope